@@ -1,3 +1,8 @@
+2007-08-01  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Conversation.cs: bug in requesting both audio and video stream
+	  in SetupAudioVideoStream
+
 2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/PersonCard.cs: Updated card to allow blank cards to be created
